2008-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/connect4-2players-activity/init_path.sh: fixed, this activity was not
	  running on the XO.
	* src/runit.sh: added support for bin/gcompris

2008-03-14 Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/dbus.c: (gc_dbus_init): Fixed olpc trac bug#6363
	"GCompris won't start if settings are changed".
	Added support for gthread initialization in dbus startup if
	not yet done.

2008-02-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Merged from GCompris trunk 3238:
	* src/boards/python/mosaic.py: fixed a major bug. this activity was making GCompris
	  crash one you clicked on the grey target button.

2007-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Made the chess activity to search for gnuchess in usual
	directory if it is not found in the one detected at compilation
	time. It is done to accomodate cases were the run time and build
	time have a different gnuchess package.
	Commit r3284

	* src/chess_computer-activity/chess.c: (start_board):
	* src/gcompris/gcompris.c: (load_properties), (main):
	* src/runit.sh:

2007-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added a little hack to avoid missing symbols from libgnomecanvas
	  at plugin load time. (merge from trunk 3060)

	* src/gcompris/gcompris.c: (main):

2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- The sugar dbus API uses Setactive instead of set_active.

	* src/gcompris/dbus.c: (_SetActive), (gc_dbus_init):

2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Merge of commit trunk 3038, now compile out of tree.
	* src/*/Makefile.am


2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Removed require on gtk-pixbuf as it's already required by GTK.
	  merged from trunk 3006
	* configure.in

2007-08-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- merged from trunk 2914 2908 2911

	* boards/flags/af.png: Created from the wikipedia one
	http://upload.wikimedia.org/wikipedia/commons/a/af/Flag_of_South_Africa.svg