@@ -565,6 +565,8 @@ src/superbrain-activity/resources/Makefile
 src/money_cents-activity/Makefile
 src/memory_add_minus_mult_div_tux-activity/Makefile
 src/redraw_symmetrical-activity/Makefile
+src/redraw_symmetrical-activity/resources/Makefile
+src/redraw_symmetrical-activity/resources/redraw/Makefile
 src/gletters-activity/Makefile
 src/gletters-activity/resources/Makefile
 src/gletters-activity/resources/gletters/Makefile
@@ -696,6 +698,9 @@ src/doubleentry-activity/resources/Makefile
 src/chronos-activity/Makefile
 src/chronos-activity/resources/chronos/Makefile
 src/chronos-activity/resources/Makefile
+src/redraw-activity/Makefile
+src/redraw-activity/resources/Makefile
+src/redraw-activity/resources/redraw/Makefile
 src/redraw-activity/Makefile
 src/maze-activity/Makefile
 src/maze-activity/resources/Makefile
