@@ -1,0 +1,5 @@
+imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/redraw
+img_DATA = \
+	redraw_symmetry.svg
+
+EXTRA_DIST = $(img_DATA)
